teamfinder z-index issue fixed

--- a/app/FormPreview/[formId]/FormPreview.css
+++ b/app/FormPreview/[formId]/FormPreview.css
@@ -34,7 +34,8 @@
 
 .team-finder-preview-aside {
   grid-column: 3;
-  position: sticky;
+  position: relative !important;
+  z-index: 1 !important;
   top: 32px;
   width: 300px;
   margin-left: 46px;
